--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,29 @@ body {
 .calculatooor {
     width: 426px;
     height: 533px;
+    padding: 16px;
     background-color: #000000;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.name {
+    font-size: 20px;
+    font-weight: 700;
+    color: whitesmoke;
+}
+
+.display-container {
+    padding: 8px;
+    background-color: azure;
+    border-radius: 5px;
+}
+
+.display {
+    background-color: #b2b9b7;
+    width: 380px;
+    height: 80px;
 }
