--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     height: 100vh;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #e0dbdb;
 
     display: flex;
@@ -15,6 +15,8 @@ body {
     width: 426px;
     height: 533px;
     padding: 16px;
+    border-radius: 10px;
+    box-sizing: border-box;
     background-color: #000000;
 
     display: flex;
@@ -39,4 +41,43 @@ body {
     background-color: #b2b9b7;
     width: 380px;
     height: 80px;
+}
+
+.keypad {
+    width: 396px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    gap: 8px;
+}
+
+.keypad div {
+    width: 93px;
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: cornsilk;
+    border-radius: 5px;
+    
+}
+
+div.numbers,
+div.decimal {
+    background-color: #405742;
+    color: azure;
+}
+
+div.divide,
+div.multiply,
+div.minus,
+div.plus,
+div.equal-to {
+    background-color: #ffbd04;
+}
+
+div.reset {
+    background-color: red;
+    color: whitesmoke;
 }
